Add paging for '/v1/wallets/operations' (#18)
