# billing/api/handlers/wallets.py
@@ -5,7 +5,7 @@ from typing import Optional
 
 from aiohttp import web
 from aiohttp_security import authorized_userid
-from webargs import fields
+from webargs import fields, validate
 
 from billing.api import responses
 from billing.api.authentication import login_required
@@ -18,7 +18,6 @@ from billing.db.storage import (
     get_wallet_balance,
 )
 from billing.typings import Order
-from webargs import validate
 
 
 @login_required
@@ -37,14 +36,15 @@ async def retrieve(request: web.Request) -> web.Response:
 @use_kwargs(
     {
         "timestamp": fields.DateTime(),
-        "order": fields.String(validate=[validate.OneOf("asc", "desc")]),
+        "order": fields.String(validate=[validate.OneOf(["asc", "desc"])]),
         "limit": fields.Integer(validate=[validate.Range(min=1, max=1000)]),
-    }
+    },
+    location="query",
 )
 async def operations(
         request: web.Request,
         timestamp: Optional[datetime] = None,
-        order: Optional[Order] = None,
+        order: Order = "desc",
         limit: int = 100,
 ) -> web.Response:
     user_id = await authorized_userid(request)
@@ -53,7 +53,13 @@ async def operations(
     if wallet is None:
         return responses.not_found("Wallet does not exist.")
 
-    ops = await get_operations(request.app['db'], wallet.id)
+    ops = await get_operations(
+        request.app['db'],
+        wallet.id,
+        timestamp,
+        order,
+        limit,
+    )
     ops_json = [op.to_json() for op in ops]
 
     return responses.success(ops_json)
